// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders [state=motion down] correctly 1`] = `
<div>
  <div
    class="MuiPaper-root MuiAccordion-root MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      class="MuiButtonBase-root MuiAccordionSummary-root"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAccordionSummary-content makeStyles-content-62"
      >
        <h6
          class="MuiTypography-root makeStyles-hideText-63 MuiTypography-h6"
        >
          test
        </h6>
        <span
          class="MuiTypography-root makeStyles-status-64 makeStyles-liftFloorLabelMoving-60 MuiTypography-button"
        >
          test
        </span>
      </div>
      <div
        aria-disabled="false"
        aria-hidden="true"
        class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            role="region"
          >
            <div
              class="MuiAccordionDetails-root makeStyles-details-65"
            >
              <div
                class="MuiTabs-root WithStyles(ForwardRef(Tabs))-root-66"
              >
                <div
                  class="MuiTabs-scroller MuiTabs-fixed"
                  style="overflow: hidden;"
                >
                  <div
                    aria-label="scrollable auto tabs example"
                    class="MuiTabs-flexContainer"
                    role="tablist"
                  >
                    <button
                      aria-selected="true"
                      class="MuiButtonBase-root MuiTab-root Component-root-68 MuiTab-textColorInherit Mui-selected Component-selected-69 MuiTab-fullWidth"
                      role="tab"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        Info
                      </span>
                    </button>
                    <button
                      aria-selected="false"
                      class="MuiButtonBase-root MuiTab-root Component-root-68 MuiTab-textColorInherit MuiTab-fullWidth"
                      role="tab"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        Request
                      </span>
                    </button>
                  </div>
                  <span
                    class="PrivateTabIndicator-root-70 PrivateTabIndicator-colorSecondary-72 MuiTabs-indicator WithStyles(ForwardRef(Tabs))-indicator-67"
                    style="left: 0px; width: 0px;"
                  />
                </div>
              </div>
              <div
                aria-labelledby="scrollable-prevent-tab-0"
                id="scrollable-prevent-tabpanel-0"
                role="tabpanel"
              >
                <div
                  class="MuiBox-root MuiBox-root-74"
                >
                  <div
                    class="makeStyles-container-75"
                  >
                    <div
                      class="makeStyles-item-76"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Name:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        test
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-76"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Location:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        (0.000, 0.000)
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-76"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Destination Floor:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        test
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-76"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Available Floors:
                      </p>
                      <ul
                        class="MuiList-root MuiList-dense MuiList-padding"
                      >
                        <li
                          class="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            test
                          </p>
                        </li>
                      </ul>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-76"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Current Mode:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        AGV
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-76"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Available Modes:
                      </p>
                      <ul
                        class="MuiList-root MuiList-dense MuiList-padding"
                      >
                        <li
                          class="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            AGV
                          </p>
                        </li>
                      </ul>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-76"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Door State:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Open
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-76"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Motion State:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Down
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="scrollable-prevent-tab-1"
                hidden=""
                id="scrollable-prevent-tabpanel-1"
                role="tabpanel"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders [state=motion invalid] correctly 1`] = `
<div>
  <div
    class="MuiPaper-root MuiAccordion-root MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      class="MuiButtonBase-root MuiAccordionSummary-root"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAccordionSummary-content makeStyles-content-100"
      >
        <h6
          class="MuiTypography-root makeStyles-hideText-101 MuiTypography-h6"
        >
          test
        </h6>
        <span
          class="MuiTypography-root makeStyles-status-102 makeStyles-liftFloorLabelUnknown-99 MuiTypography-button"
        >
          test
        </span>
      </div>
      <div
        aria-disabled="false"
        aria-hidden="true"
        class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            role="region"
          >
            <div
              class="MuiAccordionDetails-root makeStyles-details-103"
            >
              <div
                class="MuiTabs-root WithStyles(ForwardRef(Tabs))-root-104"
              >
                <div
                  class="MuiTabs-scroller MuiTabs-fixed"
                  style="overflow: hidden;"
                >
                  <div
                    aria-label="scrollable auto tabs example"
                    class="MuiTabs-flexContainer"
                    role="tablist"
                  >
                    <button
                      aria-selected="true"
                      class="MuiButtonBase-root MuiTab-root Component-root-106 MuiTab-textColorInherit Mui-selected Component-selected-107 MuiTab-fullWidth"
                      role="tab"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        Info
                      </span>
                    </button>
                    <button
                      aria-selected="false"
                      class="MuiButtonBase-root MuiTab-root Component-root-106 MuiTab-textColorInherit MuiTab-fullWidth"
                      role="tab"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        Request
                      </span>
                    </button>
                  </div>
                  <span
                    class="PrivateTabIndicator-root-108 PrivateTabIndicator-colorSecondary-110 MuiTabs-indicator WithStyles(ForwardRef(Tabs))-indicator-105"
                    style="left: 0px; width: 0px;"
                  />
                </div>
              </div>
              <div
                aria-labelledby="scrollable-prevent-tab-0"
                id="scrollable-prevent-tabpanel-0"
                role="tabpanel"
              >
                <div
                  class="MuiBox-root MuiBox-root-112"
                >
                  <div
                    class="makeStyles-container-113"
                  >
                    <div
                      class="makeStyles-item-114"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Name:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        test
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-114"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Location:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        (0.000, 0.000)
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-114"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Destination Floor:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        test
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-114"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Available Floors:
                      </p>
                      <ul
                        class="MuiList-root MuiList-dense MuiList-padding"
                      >
                        <li
                          class="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            test
                          </p>
                        </li>
                      </ul>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-114"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Current Mode:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        AGV
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-114"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Available Modes:
                      </p>
                      <ul
                        class="MuiList-root MuiList-dense MuiList-padding"
                      >
                        <li
                          class="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            AGV
                          </p>
                        </li>
                      </ul>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-114"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Door State:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Open
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-114"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Motion State:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Unknown (-1)
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="scrollable-prevent-tab-1"
                hidden=""
                id="scrollable-prevent-tabpanel-1"
                role="tabpanel"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders [state=motion stopped] correctly 1`] = `
<div>
  <div
    class="MuiPaper-root MuiAccordion-root MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      class="MuiButtonBase-root MuiAccordionSummary-root"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAccordionSummary-content makeStyles-content-24"
      >
        <h6
          class="MuiTypography-root makeStyles-hideText-25 MuiTypography-h6"
        >
          test
        </h6>
        <span
          class="MuiTypography-root makeStyles-status-26 makeStyles-liftFloorLabelStopped-21 MuiTypography-button"
        >
          test
        </span>
      </div>
      <div
        aria-disabled="false"
        aria-hidden="true"
        class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            role="region"
          >
            <div
              class="MuiAccordionDetails-root makeStyles-details-27"
            >
              <div
                class="MuiTabs-root WithStyles(ForwardRef(Tabs))-root-28"
              >
                <div
                  class="MuiTabs-scroller MuiTabs-fixed"
                  style="overflow: hidden;"
                >
                  <div
                    aria-label="scrollable auto tabs example"
                    class="MuiTabs-flexContainer"
                    role="tablist"
                  >
                    <button
                      aria-selected="true"
                      class="MuiButtonBase-root MuiTab-root Component-root-30 MuiTab-textColorInherit Mui-selected Component-selected-31 MuiTab-fullWidth"
                      role="tab"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        Info
                      </span>
                    </button>
                    <button
                      aria-selected="false"
                      class="MuiButtonBase-root MuiTab-root Component-root-30 MuiTab-textColorInherit MuiTab-fullWidth"
                      role="tab"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        Request
                      </span>
                    </button>
                  </div>
                  <span
                    class="PrivateTabIndicator-root-32 PrivateTabIndicator-colorSecondary-34 MuiTabs-indicator WithStyles(ForwardRef(Tabs))-indicator-29"
                    style="left: 0px; width: 0px;"
                  />
                </div>
              </div>
              <div
                aria-labelledby="scrollable-prevent-tab-0"
                id="scrollable-prevent-tabpanel-0"
                role="tabpanel"
              >
                <div
                  class="MuiBox-root MuiBox-root-36"
                >
                  <div
                    class="makeStyles-container-37"
                  >
                    <div
                      class="makeStyles-item-38"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Name:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        test
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-38"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Location:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        (0.000, 0.000)
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-38"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Destination Floor:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        test
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-38"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Available Floors:
                      </p>
                      <ul
                        class="MuiList-root MuiList-dense MuiList-padding"
                      >
                        <li
                          class="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            test
                          </p>
                        </li>
                      </ul>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-38"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Current Mode:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        AGV
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-38"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Available Modes:
                      </p>
                      <ul
                        class="MuiList-root MuiList-dense MuiList-padding"
                      >
                        <li
                          class="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            AGV
                          </p>
                        </li>
                      </ul>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-38"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Door State:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Open
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-38"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Motion State:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Stopped
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="scrollable-prevent-tab-1"
                hidden=""
                id="scrollable-prevent-tabpanel-1"
                role="tabpanel"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders [state=motion unknown] correctly 1`] = `
<div>
  <div
    class="MuiPaper-root MuiAccordion-root MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      class="MuiButtonBase-root MuiAccordionSummary-root"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAccordionSummary-content makeStyles-content-81"
      >
        <h6
          class="MuiTypography-root makeStyles-hideText-82 MuiTypography-h6"
        >
          test
        </h6>
        <span
          class="MuiTypography-root makeStyles-status-83 makeStyles-liftFloorLabelUnknown-80 MuiTypography-button"
        >
          test
        </span>
      </div>
      <div
        aria-disabled="false"
        aria-hidden="true"
        class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            role="region"
          >
            <div
              class="MuiAccordionDetails-root makeStyles-details-84"
            >
              <div
                class="MuiTabs-root WithStyles(ForwardRef(Tabs))-root-85"
              >
                <div
                  class="MuiTabs-scroller MuiTabs-fixed"
                  style="overflow: hidden;"
                >
                  <div
                    aria-label="scrollable auto tabs example"
                    class="MuiTabs-flexContainer"
                    role="tablist"
                  >
                    <button
                      aria-selected="true"
                      class="MuiButtonBase-root MuiTab-root Component-root-87 MuiTab-textColorInherit Mui-selected Component-selected-88 MuiTab-fullWidth"
                      role="tab"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        Info
                      </span>
                    </button>
                    <button
                      aria-selected="false"
                      class="MuiButtonBase-root MuiTab-root Component-root-87 MuiTab-textColorInherit MuiTab-fullWidth"
                      role="tab"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        Request
                      </span>
                    </button>
                  </div>
                  <span
                    class="PrivateTabIndicator-root-89 PrivateTabIndicator-colorSecondary-91 MuiTabs-indicator WithStyles(ForwardRef(Tabs))-indicator-86"
                    style="left: 0px; width: 0px;"
                  />
                </div>
              </div>
              <div
                aria-labelledby="scrollable-prevent-tab-0"
                id="scrollable-prevent-tabpanel-0"
                role="tabpanel"
              >
                <div
                  class="MuiBox-root MuiBox-root-93"
                >
                  <div
                    class="makeStyles-container-94"
                  >
                    <div
                      class="makeStyles-item-95"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Name:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        test
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-95"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Location:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        (0.000, 0.000)
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-95"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Destination Floor:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        test
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-95"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Available Floors:
                      </p>
                      <ul
                        class="MuiList-root MuiList-dense MuiList-padding"
                      >
                        <li
                          class="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            test
                          </p>
                        </li>
                      </ul>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-95"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Current Mode:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        AGV
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-95"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Available Modes:
                      </p>
                      <ul
                        class="MuiList-root MuiList-dense MuiList-padding"
                      >
                        <li
                          class="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            AGV
                          </p>
                        </li>
                      </ul>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-95"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Door State:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Open
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-95"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Motion State:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Unknown (3)
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="scrollable-prevent-tab-1"
                hidden=""
                id="scrollable-prevent-tabpanel-1"
                role="tabpanel"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders [state=motion up] correctly 1`] = `
<div>
  <div
    class="MuiPaper-root MuiAccordion-root MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      class="MuiButtonBase-root MuiAccordionSummary-root"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAccordionSummary-content makeStyles-content-43"
      >
        <h6
          class="MuiTypography-root makeStyles-hideText-44 MuiTypography-h6"
        >
          test
        </h6>
        <span
          class="MuiTypography-root makeStyles-status-45 makeStyles-liftFloorLabelMoving-41 MuiTypography-button"
        >
          test
        </span>
      </div>
      <div
        aria-disabled="false"
        aria-hidden="true"
        class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            role="region"
          >
            <div
              class="MuiAccordionDetails-root makeStyles-details-46"
            >
              <div
                class="MuiTabs-root WithStyles(ForwardRef(Tabs))-root-47"
              >
                <div
                  class="MuiTabs-scroller MuiTabs-fixed"
                  style="overflow: hidden;"
                >
                  <div
                    aria-label="scrollable auto tabs example"
                    class="MuiTabs-flexContainer"
                    role="tablist"
                  >
                    <button
                      aria-selected="true"
                      class="MuiButtonBase-root MuiTab-root Component-root-49 MuiTab-textColorInherit Mui-selected Component-selected-50 MuiTab-fullWidth"
                      role="tab"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        Info
                      </span>
                    </button>
                    <button
                      aria-selected="false"
                      class="MuiButtonBase-root MuiTab-root Component-root-49 MuiTab-textColorInherit MuiTab-fullWidth"
                      role="tab"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        Request
                      </span>
                    </button>
                  </div>
                  <span
                    class="PrivateTabIndicator-root-51 PrivateTabIndicator-colorSecondary-53 MuiTabs-indicator WithStyles(ForwardRef(Tabs))-indicator-48"
                    style="left: 0px; width: 0px;"
                  />
                </div>
              </div>
              <div
                aria-labelledby="scrollable-prevent-tab-0"
                id="scrollable-prevent-tabpanel-0"
                role="tabpanel"
              >
                <div
                  class="MuiBox-root MuiBox-root-55"
                >
                  <div
                    class="makeStyles-container-56"
                  >
                    <div
                      class="makeStyles-item-57"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Name:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        test
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-57"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Location:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        (0.000, 0.000)
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-57"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Destination Floor:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        test
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-57"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Available Floors:
                      </p>
                      <ul
                        class="MuiList-root MuiList-dense MuiList-padding"
                      >
                        <li
                          class="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            test
                          </p>
                        </li>
                      </ul>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-57"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Current Mode:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        AGV
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-57"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Available Modes:
                      </p>
                      <ul
                        class="MuiList-root MuiList-dense MuiList-padding"
                      >
                        <li
                          class="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            AGV
                          </p>
                        </li>
                      </ul>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-57"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Door State:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Open
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-57"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Motion State:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Up
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="scrollable-prevent-tab-1"
                hidden=""
                id="scrollable-prevent-tabpanel-1"
                role="tabpanel"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders [state=undefined] correctly 1`] = `
<div>
  <div
    class="MuiPaper-root MuiAccordion-root MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-disabled="false"
      aria-expanded="false"
      class="MuiButtonBase-root MuiAccordionSummary-root"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAccordionSummary-content makeStyles-content-5"
      >
        <h6
          class="MuiTypography-root makeStyles-hideText-6 MuiTypography-h6"
        >
          test
        </h6>
        <span
          class="MuiTypography-root makeStyles-status-7 makeStyles-liftFloorLabelUnknown-4 MuiTypography-button"
        >
          N/A
        </span>
      </div>
      <div
        aria-disabled="false"
        aria-hidden="true"
        class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            role="region"
          >
            <div
              class="MuiAccordionDetails-root makeStyles-details-8"
            >
              <div
                class="MuiTabs-root WithStyles(ForwardRef(Tabs))-root-9"
              >
                <div
                  class="MuiTabs-scroller MuiTabs-fixed"
                  style="overflow: hidden;"
                >
                  <div
                    aria-label="scrollable auto tabs example"
                    class="MuiTabs-flexContainer"
                    role="tablist"
                  >
                    <button
                      aria-selected="true"
                      class="MuiButtonBase-root MuiTab-root Component-root-11 MuiTab-textColorInherit Mui-selected Component-selected-12 MuiTab-fullWidth"
                      role="tab"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        Info
                      </span>
                    </button>
                    <button
                      aria-selected="false"
                      class="MuiButtonBase-root MuiTab-root Component-root-11 MuiTab-textColorInherit MuiTab-fullWidth"
                      role="tab"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        Request
                      </span>
                    </button>
                  </div>
                  <span
                    class="PrivateTabIndicator-root-13 PrivateTabIndicator-colorSecondary-15 MuiTabs-indicator WithStyles(ForwardRef(Tabs))-indicator-10"
                    style="left: 0px; width: 0px;"
                  />
                </div>
              </div>
              <div
                aria-labelledby="scrollable-prevent-tab-0"
                id="scrollable-prevent-tabpanel-0"
                role="tabpanel"
              >
                <div
                  class="MuiBox-root MuiBox-root-17"
                >
                  <div
                    class="makeStyles-container-18"
                  >
                    <div
                      class="makeStyles-item-19"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Name:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        test
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-19"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Location:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        (0.000, 0.000)
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-19"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Destination Floor:
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Unknown
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-19"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Available Floors:
                      </p>
                      <ul
                        class="MuiList-root MuiList-dense MuiList-padding"
                      >
                        <li
                          class="MuiListItem-root MuiListItem-dense MuiListItem-gutters"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            test
                          </p>
                        </li>
                      </ul>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-19"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Current Mode:
                      </p>
                      <p
                        class="MuiTypography-root makeStyles-disabledText-1 MuiTypography-body1"
                      >
                        Unknown
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-19"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Available Modes:
                      </p>
                      <p
                        class="MuiTypography-root makeStyles-disabledText-1 MuiTypography-body1"
                      >
                        Unknown
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-19"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Door State:
                      </p>
                      <p
                        class="MuiTypography-root makeStyles-disabledText-1 MuiTypography-body1"
                      >
                        Unknown
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                    <div
                      class="makeStyles-item-19"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Motion State:
                      </p>
                      <p
                        class="MuiTypography-root makeStyles-disabledText-1 MuiTypography-body1"
                      >
                        Unknown
                      </p>
                    </div>
                    <hr
                      class="MuiDivider-root"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="scrollable-prevent-tab-1"
                hidden=""
                id="scrollable-prevent-tabpanel-1"
                role="tabpanel"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
